fix many issues with videos on iOS + project covers

--- a/src/styles-labyrinth.css
+++ b/src/styles-labyrinth.css
@@ -170,7 +170,7 @@ img.image-zoom, video.image-zoom {
 }
 
 #labyrinth-copy {
-    position: fixed;
+    position: sticky;
     bottom: 16px;
     right: 16px;
     z-index: 9999;
